--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-PySide6~=6.5.2
-pandas~=2.0.3
-pdfplumber~=0.10.2
+PySide6~=6.6.1
+pandas~=2.2.0rc0
+pdfplumber~=0.10.3
 requests~=2.31.0
+openpyxl~=3.2.0b1
